<resources>
    <string name="app_name">Veluna</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="veluna_logo">Veluna</string>
    <string name="back_button">Back</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enter_phone_number">Please enter your phone number</string>
    <string name="enter_name">Please enter your name</string>
    <string name="signup_success_message">Woohoo! You’ve signed up successfully! \n Let’s continue to the Home screen!</string>

    <string name="bottom_menu_history">History</string>
    <string name="bottom_menu_home">Luna</string>
    <string name="bottom_menu_profile">Profile</string>

    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
</resources>