<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_gradient"
    tools:context=".fragments.UserInfoFragment">

    <LinearLayout
        android:id="@+id/backContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:paddingBottom="16dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/back_button"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp" />

        <TextView
            android:id="@+id/backText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_bold"
            android:text="Back"
            android:textColor="@color/color1"
            android:layout_marginStart="2dp"
            android:textSize="16sp" />
    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_bold"
            android:text="Please, tell us your name:"
            android:textColor="@color/color1"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="28dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_bold"
            android:text="How do you want VeLuna to call you?"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:background="@drawable/edit_text_background"
            android:padding="12dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_bold"
            android:text="Phone Number:"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:background="@drawable/edit_text_background"
            android:padding="12dp"
            android:layout_marginStart="15dp" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:text="Next"
            android:textColor="@color/white"
            android:backgroundTint="@color/color1"
            android:padding="12dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textViewPrivacyPolicy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/privacy_policy"
            android:textColor="@color/color3"
            android:textSize="14sp"
            android:layout_marginStart="17dp"/>

        <TextView
            android:id="@+id/textViewTermsOfUse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terms_of_use"
            android:textColor="@color/color3"
            android:textSize="14sp"
            android:gravity="end"
            android:layout_marginEnd="17dp"/>
    </LinearLayout>

    <View
        android:layout_width="310dp"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:background="@color/color1"
        android:layout_marginTop="8dp"/>

</LinearLayout>

